# Flow

./: .gitignore  PLAN.md  README.md  components.json  start.bat  start.sh
backend/: .env.example  pyproject.toml  requirements.txt  run_backend.bat
backend/app/: config.py  main.py
backend/app/core/llm/: base.py  claude_llm.py  ollama_llm.py  openai_llm.py
backend/app/models/: domain.py
backend/app/routers/: config.py  knowledge.py  project.py  questions.py
backend/app/services/: llm_service.py  pdf_service.py  question_service.py  tree_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AnimatedList.css  BlobCursor.tsx  ChoiceQuestion.tsx  EssayQuestion.tsx  GradientText.css  GradientText.tsx  KnowledgeTree.tsx  MermaidChart.tsx  PdfUploader.tsx  ProjectCard.tsx  QuestionForm.tsx  StarBorder.css  VersionGraph.tsx
frontend/src/components/ui/: AnimatedCounter.tsx  BorderGlow.css  BorderGlow.tsx  FadeIn.tsx  SpotlightCard.tsx
frontend/src/contexts/: AppContext.tsx  ThemeContext.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: GeneratePage.tsx  HomePage.tsx  ManagePage.tsx  NodeDetailPage.tsx  PracticePage.tsx  SettingsPage.tsx  TreePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
react-bits-main/src/tools/texture-lab/: Canvas.jsx  TextureLab.jsx
